k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skykube-service 

spec:
  type: LoadBalancer
  selector:
    app: skykube
  ports:
    - port: 80
      targetPort: 8080
